# Oracle-Drive

./: README.md  pubspec.yaml
.github/workflows/: release.yml
assets/shaders/: crystal_wind.frag
hook/: build.dart
lib/: main.dart
lib/components/: batch_decompile_dialog.dart  (+4 more)
linux/: CMakeLists.txt
rust/fabula_nova_sdk/: Cargo.toml  flutter_rust_bridge.yaml  pubspec.yaml  rust-toolchain.toml
rust/fabula_nova_sdk/hook/: build.dart
rust/fabula_nova_sdk/lib/bridge_generated/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
rust/fabula_nova_sdk/lib/bridge_generated/modules/: wct.dart
rust/fabula_nova_sdk/lib/bridge_generated/modules/crystalium/: structs.dart
rust/fabula_nova_sdk/lib/bridge_generated/modules/event/: structs.dart  structs.freezed.dart
rust/fabula_nova_sdk/lib/bridge_generated/modules/img/: structs.dart
rust/fabula_nova_sdk/lib/bridge_generated/modules/scd/: structs.dart
rust/fabula_nova_sdk/lib/bridge_generated/modules/vfx/: structs.dart
rust/fabula_nova_sdk/lib/bridge_generated/modules/wdb/: enums.dart  structs.dart  structs.freezed.dart
rust/fabula_nova_sdk/lib/bridge_generated/modules/wpd/: structs.dart
rust/fabula_nova_sdk/lib/bridge_generated/modules/ztr/: structs.dart
rust/fabula_nova_sdk/src/: api.rs  frb_generated.rs  lib.rs
rust/fabula_nova_sdk/src/core/: ffi_types.rs  logging.rs  mod.rs  utils.rs
rust/fabula_nova_sdk/src/ffi/: img_ffi.rs  mod.rs  wct_ffi.rs  wdb_ffi.rs  wpd_ffi.rs  ztr_ffi.rs
rust/fabula_nova_sdk/src/modules/: mod.rs
rust/fabula_nova_sdk/src/modules/clb/: converter.rs  crypto.rs  mod.rs
rust/fabula_nova_sdk/src/modules/crystalium/: api.rs  mcp_reader.rs  mod.rs  reader.rs  structs.rs  writer.rs
rust/fabula_nova_sdk/src/modules/event/: api.rs  mod.rs  reader.rs  structs.rs
rust/fabula_nova_sdk/src/modules/img/: api.rs  mod.rs  reader.rs  structs.rs  writer.rs
rust/fabula_nova_sdk/src/modules/scd/: api.rs  decoder.rs  mod.rs  reader.rs  structs.rs
rust/fabula_nova_sdk/src/modules/vfx/: api.rs  mod.rs  reader.rs  structs.rs
rust/fabula_nova_sdk/src/modules/vfx/renderer/: context.rs  frame_buffer.rs  mod.rs  pipeline.rs
rust/fabula_nova_sdk/src/modules/wbt/: api.rs  container.rs  crypto.rs  filelist.rs  mod.rs  repack.rs  tests.rs
rust/fabula_nova_sdk/src/modules/wct/: mod.rs  tests.rs
rust/fabula_nova_sdk/src/modules/wdb/: api.rs  bit_helpers.rs  dicts.rs  enum_registry.rs  enums.rs  mod.rs  reader.rs  structs.rs  writer.rs
rust/fabula_nova_sdk/src/modules/white_clb/: converter.rs  crypto.rs  mod.rs
rust/fabula_nova_sdk/src/modules/wpd/: api.rs  mod.rs  reader.rs  structs.rs  writer.rs
rust/fabula_nova_sdk/src/modules/ztr/: api.rs  compression.rs  key_dicts.rs  mod.rs  reader.rs  structs.rs  text_decoder.rs  text_encoder.rs  writer.rs
test/: widget_test.dart  ztr_renderer_test.dart
tool/: ffigen.dart
wiki/: Architecture.md  Archive-Management.md  Building-from-Source.md  Code-Style.md  Contributing.md  Crystalium-Editor.md  Database-Editor.md  FAQ.md  File-Formats.md  Getting-Started.md  Home.md  Rust-SDK.md  Text-Editor.md  Troubleshooting.md  Workflow-Nodes.md  Workflow-System.md  Workspace-Manager.md  _Footer.md  _Sidebar.md
windows/: CMakeLists.txt
workflows/: add_hope_companion.json  set_daily_adjust_loop.json
(+235 files in other folders)
