[package]
name = "fabula_nova_sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(frb_expand)"] }

[dependencies]
flutter_rust_bridge = "=2.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
binrw = "0.13"
thiserror = "1.0"
anyhow = "1.0"
rayon = "1.8"
flate2 = "1.0"
byteorder = "1.5"
encoding_rs = "0.8"
log = "0.4"
once_cell = "1.19"
chrono = "0.4"
indexmap = "2.2"
walkdir = "2.5"
image = "0.25"
ddsfile = "0.5"

# GPU rendering for VFX player
wgpu = "24.0"
pollster = "0.4"
bytemuck = { version = "1.21", features = ["derive"] }
