[package]
name = "fabula_nova_sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(frb_expand)"] }

[dependencies]
flutter_rust_bridge = "=2.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
binrw = "0.13"
thiserror = "1.0"
anyhow = "1.0"
rayon = "1.8"
flate2 = "1.0"
byteorder = "1.5"
encoding_rs = "0.8"
log = "0.4"
once_cell = "1.19"
chrono = "0.4"
indexmap = "2.2"
walkdir = "2.5"
image = "0.25"
ddsfile = "0.5"

# GPU rendering for VFX player
wgpu = "24.0"
pollster = "0.4"
bytemuck = { version = "1.21", features = ["derive"] }

# Audio decoding for SCD
lewton = { version = "0.10", optional = true }
ogg = { version = "0.9", optional = true }

# Speech translation with SeamlessM4T via Candle (git version for SeamlessM4T support)
candle-core = { git = "https://github.com/huggingface/candle.git", optional = true }
candle-nn = { git = "https://github.com/huggingface/candle.git", optional = true }
candle-transformers = { git = "https://github.com/huggingface/candle.git", optional = true }
hf-hub = { version = "0.3", optional = true }
tokenizers = { version = "0.19", optional = true }
hound = { version = "3.5", optional = true }  # WAV file handling

[dev-dependencies]
glob = "0.3"

[features]
default = ["vorbis"]
vorbis = ["lewton", "ogg"]
translation = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "tokenizers", "hound"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
rocm = ["cuda"]  # ROCm maps to CUDA interface
